--- a/index.html
+++ b/index.html
@@ -1,24 +1,15 @@
-<!-- index.html -->
-
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
-  
-  <title>Docsify Demo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://www.bouillet.com.ar/static/main.css" rel="stylesheet">
+    <title>Bouillet studio</title>
 </head>
 <body>
-  <div id="app"></div>
-  <script>
-    window.$docsify = {
-      el: "#app",
-      repo: 'https://github.com/bryantson/OpensourceDotComDemos/tree/master/DocsifyDemo',
-      loadSidebar: true
-    }
-  </script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+    <h1>Agustín Bouillet<h1>
+            <p>
+                <a href="https://linktr.ee/bouillet">linktr.ee/bouillet</a>
+            </p>
 </body>
 </html>
