--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://www.bouillet.com.ar/static/main.css" rel="stylesheet">
+    <link href="https://bouillet.com.ar/static/main.css" rel="stylesheet">
     <title>Bouillet studio</title>
 </head>
 <body>
