--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://bouillet.com.ar/static/main.css" rel="stylesheet">
     <title>Bouillet studio</title>
+<style>
+body {
+    background: #101b22;
+    color: #ddd7d8;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+
+a {
+    color: #ed688b;
+    font-size: inherit;
+}
+</style>
 </head>
 <body>
     <h1>Agustín Bouillet<h1>
