--- a/index.html
+++ b/index.html
@@ -4,19 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bouillet studio</title>
-<style>
-body {
-    background: #101b22;
-    color: #ddd7d8;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: center;
-}
-
-a {
-    color: #ed688b;
-    font-size: inherit;
-}
-</style>
+    <link href="./css/main.css" rel="stylesheet">
 </head>
 <body>
     <h1>Agustín Bouillet<h1>
