--- a/index.html
+++ b/index.html
@@ -5,32 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bouillet studio</title>
 
-    <link href="./css/main.css" rel="stylesheet">
+    <link href="./css/main.css?v=0.0.1" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
-        </style>
+    </style>
 </head>
 <body>
-<div class="wrapper">
-
-    <header class="one" style="background-color: #2B3038; padding: 3em 3em 4em 3em; text-align: left;">
-        <h1>
-            <img alt="Agustín Bouillet, Fullstack developer & graphic designer" lang="en" src="./images/bouillet.svg" alt="" width="400" style="display: inline; max-width: 400px; width: 100%;">
+    <div class="wrapper">
+        <header class="one" style="background-color: #2B3038; padding: 3em 3em 4em 3em; text-align: left;">
             <h1>
-    </header>
-
-
-<div class="two">
-<address>
-Email: <span data-email></span><br />
-<span>Ciudad Autónoma de Buenos Aires,<br>Argentina</span><br>
-<p>
-    Encontrame en: <a href="https://linktr.ee/bouillet">linktr.ee/bouillet</a>
-</p>
-</address>
-
-</div>
-</div>           
-<script src="./js/main.js"></script>
+                <img alt="Agustín Bouillet, Fullstack developer & graphic designer" lang="en"
+                    src="./images/bouillet.svg?v=0.0.1" alt="" width="400"
+                    style="display: inline; max-width: 400px; width: 100%;">
+                <h1>
+        </header>
+        <div class="two">
+            <address>
+                Email: <span data-email></span><br />
+                <span>Ciudad Autónoma de Buenos Aires,<br>Argentina</span><br>
+                <p>
+                    Encontrame en: <a href="https://linktr.ee/bouillet">linktr.ee/bouillet</a>
+                </p>
+            </address>
+        </div>
+    </div>
+    <script src="./js/main.js?v=0.0.1"></script>
 </body>
 </html>
