--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,10 +21,9 @@
         </header>
         <div class="two">
             <address>
-                Email: <span data-email></span><br />
-                <span>Ciudad Autónoma de Buenos Aires,<br>Argentina</span><br>
+            
                 <p>
-                    Encontrame en: <a href="https://linktr.ee/bouillet">linktr.ee/bouillet</a>
+                    Contact: <a href="https://linktr.ee/bouillet">linktr.ee/bouillet</a>
                 </p>
             </address>
         </div>
