--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bouillet studio</title>
-
-    <link href="./css/main.css?v=0.0.2" rel="stylesheet">
+    <title>Agustín Bouillet</title>
+    <link href="./css/main.css?v=0.0.3" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
     </style>
 </head>
 <body>
     <div class="wrapper">
-        <header class="one" style="background-color: #2B3038; padding: 3em 3em 3.25em 3em; text-align: left;">
+        <header class="one header">
             <h1>
-                <img alt="Agustín Bouillet, Fullstack developer & graphic designer" lang="en"
-                    src="./images/bouillet.svg?v=0.0.2" alt="" width="400"
-                    style="display: inline; max-width: 400px; width: 100%;">
+                <img 
+                    alt="Agustín Bouillet, Fullstack developer & graphic designer" 
+                    lang="en"
+                    src="./images/bouillet.svg?v=0.0.3" 
+                    class="brand" width="400">
                 <h1>
         </header>
         <div class="two">
@@ -28,6 +29,5 @@
             </address>
         </div>
     </div>
-    <script src="./js/main.js?v=0.0.2"></script>
 </body>
 </html>
