--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agustín Bouillet</title>
-    <link href="./css/main.css?v=0.0.3" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
     </style>
